--- a/Apoptosis.ipynb
+++ b/Apoptosis.ipynb
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "# Read pre-recorded datasets\n",
-    "h5store = '../examples/small_hexagonal.hf5'\n",
+    "h5store = 'data/small_hexagonal.hf5'\n",
     "from tyssue.io.hdf5 import save_datasets, load_datasets\n",
     "\n",
     "datasets = load_datasets(h5store,\n",
@@ -366,7 +366,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2bbc47d62f974d4c84c37f6df82c5876",
+       "model_id": "86339e4c1ded4c56ae52616d572ca258",
        "version_major": 2,
        "version_minor": 0
       },
