--- a/Cell_Division.ipynb
+++ b/Cell_Division.ipynb
@@ -163,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets = load_datasets('../examples/small_ellipsoid.hf5',\n",
+    "datasets = load_datasets('data/small_ellipsoid.hf5',\n",
     "                         data_names=['vert', 'edge',\n",
     "                                     'face', 'cell'])\n",
     "\n",
@@ -203,7 +203,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0a0dfce9530b4342ba5baaeaefd09c19",
+       "model_id": "297738a2329c470589e635f067eebe8c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -588,7 +588,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66b590689cd447b7a1279b836d74dab0",
+       "model_id": "b4e7137472214955b419814adfd2eaf7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -962,7 +962,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "50fdf42fa3ab409880436fb91f5d2738",
+       "model_id": "c4254b09186249afadd3fbb9fb67daeb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1094,7 +1094,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f309b8cc531454c88f3bb87fd4791ec",
+       "model_id": "b3ba335c7b3c4a01ba1b42f579217c59",
        "version_major": 2,
        "version_minor": 0
       },
