--- a/Energy_minimization.ipynb
+++ b/Energy_minimization.ipynb
@@ -135,8 +135,7 @@
     }
    ],
    "source": [
-    "h5store = '../examples/small_hexagonal.hf5'\n",
-    "#h5store = '../examples/before_apoptosis.hf5'\n",
+    "h5store = 'data/small_hexagonal.hf5'\n",
     "\n",
     "datasets = hdf5.load_datasets(h5store,\n",
     "                              data_names=['face', 'vert', 'edge'])\n",
