--- a/Type_1_transition.ipynb
+++ b/Type_1_transition.ipynb
@@ -68,7 +68,7 @@
     }
    ],
    "source": [
-    "h5store = '../examples/small_hexagonal.hf5'\n",
+    "h5store = 'data/small_hexagonal.hf5'\n",
     "datasets = hdf5.load_datasets(h5store,\n",
     "                              data_names=['face', 'vert', 'edge'])\n",
     "specs = config.geometry.cylindrical_sheet()\n",
