added missing illustrations

--- a/ReversibleNetworkReconnection.ipynb
+++ b/ReversibleNetworkReconnection.ipynb
@@ -44,7 +44,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7641ab8557cf4681a2b76f8c21cb1953",
+       "model_id": "cefc5d183140431e9c22592d5a64d29a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -970,7 +970,11 @@
    "source": [
     "## I→H transition\n",
     "\n",
-    "![IH transition in a bulk and a RNR](../data/png/IH_transition.png)\n",
+    "![IH transition in a bulk and a RNR](data/png/IH_transition.png)\n",
+    "\n",
+    "This produces a shape similar to the one studied by LM Escudero and collegues [in their article](https://www.nature.com/articles/s41467-018-05376-1.pdf).\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -982,7 +986,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0988c21153224044990cef22ea4470c5",
+       "model_id": "4b9f95d9b00d42729784da172e364165",
        "version_major": 2,
        "version_minor": 0
       },
