Rename notebook file and add explanation for effector parameters

--- a/03-Quasistatic_models.ipynb
+++ b/03-Quasistatic_models.ipynb
@@ -127,6 +127,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is several possibilities for applying different effector parameters. \n",
+    "To sets a parameters for all edges, you can use : \n",
+    "``` python \n",
+    "model_specs = {\n",
+    "    \"edge\": {\n",
+    "        \"line_tension\": 1.,\n",
+    "    },\n",
+    "}\n",
+    "```\n",
+    "or \n",
+    "```\n",
+    "sheet.edge_df['line_tension'] = 1.\n",
+    "```\n",
+    "\n",
+    "To sets parameters for a subsets of edges:\n",
+    "```\n",
+    "sheet.edge_df.loc[sheet.edge_df['sx']<0, 'line_tension'] = 0.5\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -602,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
