WIP notebook description in readme.md, and rename notebook

--- a/05-EventManager.ipynb
+++ b/05-EventManager.ipynb
@@ -13,21 +13,15 @@
    "id": "diverse-entry",
    "metadata": {},
    "source": [
-    "The event manager is the system which manage the different behavior of a simulation. \n",
+    "The event manager is the system which manage the different behavior of a simulation. It is composed of two lists :\n",
+    "- `current` : list of actions to be execute during the current simulation time\n",
+    "- `next`    : list of actions to be execute for the next simulation time, this list is filled during the current simulation time\n",
+    "\n",
     "\n",
     "A behavior is a function which describe/contains the actions requested to realize an event. For example, the behavior which describe the cell division is composed of :\n",
     "- growing cell area until its reach a certain threshol\n",
     "- dividing cell into two daughter cell\n",
     " \n",
-    "A behavior function is composed of two parts :\n",
-    "- signature part, which contains `sheet` and `manager` parameter\n",
-    "- keywords part, which is specific to one behavior function\n",
-    "\n",
-    "The event manager is composed of two lists :\n",
-    "- `current` : list of actions to be execute during the current simulation time\n",
-    "- `next`    : list of actions to be execute for the next simulation time, this list is filled during the current simulation time\n",
-    "\n",
-    "\n",
     "\n",
     "![Event manager principle ](illus/EventManager.png)\n"
    ]
@@ -195,7 +189,7 @@
    "source": [
     "## Write a behavior function\n",
     "\n",
-    "A behavior function is composed of two parts :\n",
+    "Behavior parameters function are composed of two parts :\n",
     "- signature part, which contains `sheet` and `manager` parameter\n",
     "- keywords part, which is specific to one behavior function\n",
     "\n",
@@ -422,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
