--- a/03-Dynamics.ipynb
+++ b/03-Dynamics.ipynb
@@ -85,7 +85,10 @@
     "### (Non)-Dimensionalization\n",
     "\n",
     "\n",
-    "If you Farhadifar's article or other modeling papers, you'll see that the discussion on parameter values is done by  defining unit dimensions, e.g. the unit length is defined such that the preferred area is unity. This can be done by scaling the dimension-less parameters and scaling them to correspond to the geometry. But in general it is simpler, and more robust computationally to scale the epithelium so that the average area is around unity (it is not strictly equivalent, but good usually enough).\n"
+    "If you read Farhadifar's article or other modeling papers, you'll see that the discussion on parameter values is done by  defining unit dimensions, e.g. the unit length is defined such that the preferred area is unity. This can be done by defining dimension-less parameters and scaling them to correspond to the geometry (for example, line tension, which as units of energy per unit length, has a factor of $\\sqrt(A_0)$ between its dimension-less and its dimentionalized values. But in general it is simpler, and more robust computationally to scale the epithelium so that the average area is around unity (it is not strictly equivalent, but usually good enough), and then working with dimension-less units. \n",
+    "\n",
+    "Comparison with the real tissue can then be done by homothetically scaling length to match e.g. average junction lengths between experiments and models.\n",
+    "\n"
    ]
   },
   {
