--- a/06-EventManager.ipynb
+++ b/06-EventManager.ipynb
@@ -14,16 +14,16 @@
    "metadata": {},
    "source": [
     "The event manager is the system which manage the different behavior of a simulation. It is composed of two lists :\n",
-    "- `current` : list of actions to be execute during the current simulation time\n",
-    "- `next`    : list of actions to be execute for the next simulation time, this list is filled during the current simulation time\n",
+    "- `current` : list of actions to be executed during the current simulation step.\n",
+    "- `next`    : list of actions to be executed for the next simulation step, this list is filled during the current simulation step.\n",
     "\n",
     "\n",
-    "A behavior is a function which describe/contains the actions requested to realize an event. For example, the behavior which describe the cell division is composed of :\n",
-    "- growing cell area until its reach a certain threshol\n",
+    "A behavior is a function which describes/contains the actions requested to realize an event. For example, the behavior which describe the cell division is composed of :\n",
+    "- growing cell area until its reach a certain threshold\n",
     "- dividing cell into two daughter cell\n",
     " \n",
     "\n",
-    "![Event manager principle ](illus/EventManager.png)\n"
+    "![Event manager principle](illus/EventManager.png)\n"
    ]
   },
   {
@@ -416,7 +416,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
